# card-prototype

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32G431RBTX_FLASH.ld  cubeide-gcc.cmake  features.cmake  gcc.cmake  wincubeclt-gcc.cmake
App/: CMakeLists.txt
App/Inc/: app.h  base_defs.h  board.h  button.h  buzzer.h  cassert.h  eink.h  games.h  gui.h  img.h  led.h  m24lr.h  rfal_platform.h  sender.h  st25r.h  ugui_config.h  watchdog.h
App/Inc/Games/: CardDeck.h  Hanabi.h  Humanity.h
App/Src/: RTOSResources.c  app.c  button.c  buzzer.c  card.c  card_bist.c  eink.c  eink_e370_driver.c  eink_lib.c  gui.c  img.c  led.c  m24lr.c  sender.c  st25r.c  st25r_commands.c  watchdog.c
App/Src/Games/: CardDeck.c  Hanabi.c  Humanity.c  HumanityQuotes.c  games.c
Board/: CMakeLists.txt
Board/SVD/: README.md
Board/SVD/G4/: STM32GBK1CBT6.svd
Board/card_rev1_l071/: .cproject  .project  CMakeLists.txt  STM32L071K8UX_FLASH.ld  card_rev1.ioc
Board/card_rev1_l071/Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
Board/card_rev1_l071/Core/Src/: adc.c  gpio.c  i2c.c  main.c  spi.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  usart.c
Board/controller_g0c1/: .cproject  .project  CMakeLists.txt  STM32G0C1RETX_FLASH.ld  STM32G0C1RETX_RAM.ld  controller_g0c1.ioc
Board/controller_g0c1/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Board/controller_g0c1/Core/Src/: adc.c  app_freertos.c  gpio.c  i2c.c  main.c  rng.c  spi.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  tim.c  usart.c
Board/devboard_f446/: .cproject  .project  CMakeLists.txt  devboard_f446.ioc
Board/devboard_f446/Core/Inc/: main.h
Board/devboard_f446/Core/Src/: freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c
Board/nucleo_f446/: .cproject  .project  CMakeLists.txt  multi-target-f4.ioc
Board/nucleo_f446/Core/Inc/: main.h
Board/nucleo_f446/Core/Src/: gpio.c  main.c
Board/nucleo_g431/: .cproject  .project  CMakeLists.txt  multi-target-g4.ioc
Board/nucleo_g431/Core/Inc/: main.h  stm32g4xx_hal_conf.h
Board/nucleo_g431/Core/Src/: gpio.c  i2c.c  main.c  spi.c
Libs/: CMakeLists.txt
Libs/DataProtocol/: CMakeLists.txt
Libs/DataProtocol/Inc/: data_protocol.h  eeprom.h
Libs/DataProtocol/Src/: eeprom.c
Libs/FATFS/: CMakeLists.txt
Libs/M24LR/: CMakeLists.txt
Libs/M24LR/Inc/: m24lr_driver.h
Libs/M24LR/Src/: m24lr_driver.c
Libs/RFAL/: CMakeLists.txt
Libs/RFAL/ST25R3911/source/: rfal_nfc.c
Libs/RFAL/ST25R3911/source/st25r3911/: rfal_rfst25r3911.c  st25r3911.c  st25r3911_com.c
Libs/RFAL/ST25R3911/source/st25r3916/: rfal_features.h  st25r3916_com.c  st25r3916_com.h
Libs/RFAL/ST25R3916B/source/st25r3916/: rfal_rfst25r3916.c
Libs/RFAL/doc/: .gitignore  Release_Notes.html  ST25R3911B_CERTComplianceReport.html  ST25R3911B_MisraComplianceReport.html
Libs/RFAL/include/: rfal_rf.h
Libs/RFAL/source/: rfal_isoDep.c
Libs/RFAL/source/st25r3911/: rfal_dpoTbl.h  rfal_features.h  rfal_rfst25r3911.c
Libs/RFAL/source/st25r3916/: st25r3916_com.c
Libs/ST25R_Common/: CMakeLists.txt
Libs/ST25R_Common/Inc/: ST25R_logger.h  ST25R_spi.h  ST25R_timer.h
Libs/ST25R_Common/Src/: ST25R_logger.c  ST25R_spi.c  ST25R_timer.c
Sim/: CMakeLists.txt
Sim/Inc/Games/: CardDeck.h  Hanabi.h
Sim/Inc/Stubs/: button.h  cmsis_os.h  games.h  gui.h  rng.h  sender.h  ugui.h
Sim/Src/: sim.c
Test/card/2/: .ninja_deps  .ninja_log  build.ninja  ecards.map
Test/card/2/.cmake/api/v1/reply/: cache-v2-6d3e4b31599bd4d937bf.json  cmakeFiles-v1-5595e687772fb9b9af2c.json  codemodel-v2-ebda7d14dd03dd57c7ac.json  directory-Board-Debug-62ec37efa424e0410869.json  directory-Board.card_rev1_l071-Debug-32dec09048f609416912.json  directory-Libs.DataProtocol-Debug-611f3259abcf7ad067b6.json  directory-Libs.ugui-Debug-ad02a4cdb5629dfe5526.json  index-2025-03-13T19-44-56-0668.json  target-ecards-Debug-115e7ac0b7d66eef9805.json
