
# Select correct directory based on board name
if (${BOARD} MATCHES "G431")
	add_subdirectory(nucleo_g431)
elseif (${BOARD} MATCHES "F446")
	add_subdirectory(nucleo_f446)
endif()

# Variables needed
set (MCPU ${MCPU} PARENT_SCOPE)
set (MFPU ${MFPU} PARENT_SCOPE)
set (MFLOAT_ABI ${MFLOAT_ABI} PARENT_SCOPE)
set (RUNTIME_LIBRARY ${RUNTIME_LIBRARY} PARENT_SCOPE)
set (RUNTIME_LIBRARY_SYSCALLS ${RUNTIME_LIBRARY_SYSCALLS} PARENT_SCOPE)
set (G4_DIR ${G4_DIR} PARENT_SCOPE)
set (LINKER_SCRIPT ${LINKER_SCRIPT} PARENT_SCOPE)
set (BOARD_SOURCES ${BOARD_SOURCES} PARENT_SCOPE)
set (BOARD_INCLUDES ${BOARD_INCLUDES} PARENT_SCOPE)
set (BOARD_DEFINES ${BOARD_DEFINES} PARENT_SCOPE)
