set(COMBINED_LIB_SOURCES    "")
set(COMBINED_LIB_INCLUDES   "")
set(COMBINED_LIB_DEFINES    "")

foreach (LIB ${SELECTED_LIBS})
    set(LIB_SOURCES     "")
    set(LIB_INCLUDES    "")
    set(LIB_DEFINES     "")

    add_subdirectory(${LIB})

    set(COMBINED_LIB_SOURCES    ${COMBINED_LIB_SOURCES}     ${LIB_SOURCES})
    set(COMBINED_LIB_INCLUDES   ${COMBINED_LIB_INCLUDES}    ${LIB_INCLUDES})
    set(COMBINED_LIB_DEFINES    ${COMBINED_LIB_DEFINES}     ${LIB_DEFINES})

    message("Including library " ${LIB})
endforeach()

set(COMBINED_LIB_SOURCES    ${COMBINED_LIB_SOURCES}     PARENT_SCOPE)
set(COMBINED_LIB_INCLUDES   ${COMBINED_LIB_INCLUDES}    PARENT_SCOPE)
set(COMBINED_LIB_DEFINES    ${COMBINED_LIB_DEFINES}     PARENT_SCOPE)

